@@ -1,3 +1,9 @@
+ClipIt-1.4.1-20110526006 - 26 May. 2011
+
+	+ Fixed: Fixed display and icon of indicator menu.
+	+ Fixed: We are now installing the icon to the icontheme instead of
+			the pixmaps folder.
+
 ClipIt-1.4.1-20110526005 - 26 May. 2011
 
 	+ Added: Added options for static items in menu.
